# haos_prediction_markets

./: .env.example  .gitignore  Cargo.toml  DOCS.md  README.md  deploy-and-verify.sh  docker-compose.yml  rust-toolchain.toml
contracts/: deploy-and-verify-mock.sh  foundry.toml  package.json
contracts/script/: Deploy.s.sol  DeployMock.s.sol
contracts/src/: FHERC20.sol  MockedOrderBook.sol  OrderBook.sol
contracts/test/: FHERC20.t.sol  OrderBookTest.t.sol
crates/haos_orderbook/: Cargo.toml  Dockerfile  gen-abi.sh
crates/haos_orderbook/src/: constants.rs  lib.rs  main.rs
crates/haos_orderbook/src/chain/: contract.rs  listener.rs  mod.rs  order.rs
crates/haos_orderbook/src/config/: mod.rs
crates/haos_orderbook/src/manager/: mod.rs
crates/haos_orderbook/src/orderbook/: mod.rs  order.rs  trader.rs
crates/haos_orderbook/src/server/: mod.rs  reboot.rs
haos_orderbook/cargo/: Cargo.toml
haos_orderbook/cargo/src/orderbook/: main.rs  matching_engine.rs  mdata.rs  order_g.rs  order_manager.rs  orderbook.rs
script/: Deploy.s.sol
src/: FHERC20.sol  OrderBook.sol
test/: OrderBookTest.t.sol
typescript/chain-parser/: .gitignore  package.json
typescript/chain-parser/src/: index.ts
typescript/order-placer/: README.md  bun.lockb  gen-abi.sh  package.json
typescript/order-placer/src/: index.ts
typescript/order-placer/src/config/: fhenixChain.ts  index.ts
typescript/order-placer/src/order/: index.ts
typescript/order-placer/src/token/: index.ts
typescript/order-scanner/: .gitignore  Dockerfile  README.md  bun.lockb  package.json
typescript/order-scanner/src/: index.ts
typescript/order-scanner/src/config/: fhenixChain.ts  index.ts
typescript/order-scanner/src/order/: index.ts
typescript/order-scanner/src/orderbook/: index.ts
typescript/order-scanner/src/utils/: index.ts
