[workspace]
resolver = "2"

members = ["crates/*"]

[workspace.package]
edition = "2021"
authors = ["Haos"]
homepage = ""
license = "MIT"
categories = [""]
repository = "https://github.com/turbofakesmile/haos_prediction_markets"

[workspace.dependencies]
alloy = { version = "0.8.3", features = ["full"] }
anyhow = "1.0.95"
axum = "0.7.9"
futures-util = "0.3"
reqwest = { version = "0.12.12" }
serde = "1.0.216"
serde_json = "1.0.134"
tokio = "1.42.0"
tower-http = "0.6.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
