[package]
name = "haos_orderbook"
version = "0.1.0"
description = "Orderbook for Haos Prediction Markets"

edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
tower-http = { workspace = true, features = ["add-extension"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "fmt",
    "json",
    "env-filter",
] }
